    Reported by "JSilex".
  - Fix a spurious error on UPDATE or DELETE if the column options "key" and
    "strip_zeros" are used on the same column.
    Report and patch by Noriyoshi Shinoda.
  - Fix "out of memory" and other errors on Linux systems with FIPS enabled.
    The cause is that calculating MD5 hashes on such systems causes errors.
    Reported by Hank Drews.

Version 2.4.0, released 2021-09-24

  Enhancements:
  - Support push-down of "uuid" values.
    Per request from Asish Kumar Gaddipati.
  - Introduce a server option "nchar", turned "off" by default.
    This option, if set, enables the fix for NCHAR and NVARCHAR2 columns
    introduced in 2.3.0.
    We don't want that by default, since it causes a noticable performance
    hit and makes UPDATEs with long strings fail with ORA-01461.
    Problem reports by "threenotrump", "CHunter" and Phil Florent.
  - Push down LIMIT clauses if possible.
    These are pushed down as FETCH FIRST n ROWS ONLY from Oracle 12.2 on.
    Based on a patch by Gilles Darold, per request from Ilia Sazonov.

  Bugfixes:
  - Fix a performance regression introduced in 2.3.0 by the fix for NCHAR
    and NVARCHAR2 columns.
    Reported by Phil Florent.
  - Fix a crash with type coerced array parameters.
    This can make queries fail with a WHERE condition like
       WHERE varcharcol = ANY ($1);
    where $1 is a text[].
    Reported by "samuelchoi16".
  - Fix numeric precision in IMPORT FOREIGN SCHEMA.
    In Oracle the precision of a NUMBER can be less than the scale,
    but that is not allowed in PostgreSQL.
    That leads to errors during IMPORT.
    Reported by Alberto Dell'Era.
  - Translate Oracle NUMBER to "boolean" correctly.
    The documentation says that numbers greater than 0 are mapped to
    TRUE, but oracle_fdw gagged on numbers greater than 1 with errors like
      ERROR:  invalid input syntax for type boolean: "2"
    Reported by Maris Zinbergs.
  - Fix crash during ANALYZE of certain foreign tables.