@@ -83,6 +83,7 @@ typedef enum
 	ORA_TYPE_DATE,
 	ORA_TYPE_TIMESTAMP,
 	ORA_TYPE_TIMESTAMPTZ,
+	ORA_TYPE_TIMESTAMPLTZ,  /* TIMESTAMP WITH LOCAL TIME ZONE */
 	ORA_TYPE_INTERVALY2M,
 	ORA_TYPE_INTERVALD2S,
 	ORA_TYPE_BLOB,
